qt6/gen_qdatetimeedit.h

typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QTimeEdit QTimeEdit;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
bool QTimeEdit_override_virtual_dragMoveEvent(void* self, intptr_t slot);
bool QTimeEdit_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QTimeEdit_override_virtual_dropEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QTimeEdit_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QTimeEdit_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QTimeEdit_override_virtual_metric(void* self, intptr_t slot);
int QTimeEdit_virtualbase_metric(const void* self, int param1);
bool QTimeEdit_override_virtual_initPainter(void* self, intptr_t slot);
void QTimeEdit_virtualbase_initPainter(const void* self, QPainter* painter);
bool QTimeEdit_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QTimeEdit_virtualbase_redirected(const void* self, QPoint* offset);
bool QTimeEdit_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QTimeEdit_virtualbase_sharedPainter(const void* self);
bool QTimeEdit_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QTimeEdit_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTimeEdit_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QTimeEdit_override_virtual_childEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTimeEdit_override_virtual_customEvent(void* self, intptr_t slot);
void QTimeEdit_virtualbase_customEvent(void* self, QEvent* event);
bool QTimeEdit_override_virtual_connectNotify(void* self, intptr_t slot);
void QTimeEdit_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTimeEdit_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTimeEdit_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTimeEdit_staticMetaObject();
void QTimeEdit_delete(QTimeEdit* self);
QDateEdit* QDateEdit_new(QWidget* parent);
QDateEdit* QDateEdit_new2();
QDateEdit* QDateEdit_new3(QDate* date);
QDateEdit* QDateEdit_new4(QDate* date, QWidget* parent);
QMetaObject* QDateEdit_metaObject(const QDateEdit* self);
void* QDateEdit_metacast(QDateEdit* self, const char* param1);
int QDateEdit_metacall(QDateEdit* self, int param1, int param2, void** param3);
struct miqt_string QDateEdit_tr(const char* s);
void QDateEdit_userDateChanged(QDateEdit* self, QDate* date);
void QDateEdit_connect_userDateChanged(QDateEdit* self, intptr_t slot);
struct miqt_string QDateEdit_tr2(const char* s, const char* c);
struct miqt_string QDateEdit_tr3(const char* s, const char* c, int n);
bool QDateEdit_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QDateEdit_virtualbase_metaObject(const void* self);
bool QDateEdit_override_virtual_metacast(void* self, intptr_t slot);
void* QDateEdit_virtualbase_metacast(void* self, const char* param1);
bool QDateEdit_override_virtual_metacall(void* self, intptr_t slot);
int QDateEdit_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QDateEdit_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QDateEdit_virtualbase_sizeHint(const void* self);
bool QDateEdit_override_virtual_clear(void* self, intptr_t slot);
void QDateEdit_virtualbase_clear(void* self);
bool QDateEdit_override_virtual_stepBy(void* self, intptr_t slot);
void QDateEdit_virtualbase_stepBy(void* self, int steps);
bool QDateEdit_override_virtual_event(void* self, intptr_t slot);
bool QDateEdit_virtualbase_event(void* self, QEvent* event);
bool QDateEdit_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_keyPressEvent(void* self, QKeyEvent* event);
bool QDateEdit_override_virtual_wheelEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_wheelEvent(void* self, QWheelEvent* event);
bool QDateEdit_override_virtual_focusInEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_focusInEvent(void* self, QFocusEvent* event);
bool QDateEdit_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QDateEdit_virtualbase_focusNextPrevChild(void* self, bool next);
bool QDateEdit_override_virtual_validate(void* self, intptr_t slot);
int QDateEdit_virtualbase_validate(const void* self, struct miqt_string input, int* pos);
bool QDateEdit_override_virtual_fixup(void* self, intptr_t slot);
void QDateEdit_virtualbase_fixup(const void* self, struct miqt_string input);
bool QDateEdit_override_virtual_dateTimeFromText(void* self, intptr_t slot);
QDateTime* QDateEdit_virtualbase_dateTimeFromText(const void* self, struct miqt_string text);
bool QDateEdit_override_virtual_textFromDateTime(void* self, intptr_t slot);
struct miqt_string QDateEdit_virtualbase_textFromDateTime(const void* self, QDateTime* dt);
bool QDateEdit_override_virtual_stepEnabled(void* self, intptr_t slot);
int QDateEdit_virtualbase_stepEnabled(const void* self);
bool QDateEdit_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_mousePressEvent(void* self, QMouseEvent* event);
bool QDateEdit_override_virtual_paintEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_paintEvent(void* self, QPaintEvent* event);
bool QDateEdit_override_virtual_initStyleOption(void* self, intptr_t slot);
void QDateEdit_virtualbase_initStyleOption(const void* self, QStyleOptionSpinBox* option);
bool QDateEdit_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QDateEdit_virtualbase_minimumSizeHint(const void* self);
bool QDateEdit_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QDateEdit_virtualbase_inputMethodQuery(const void* self, int param1);
bool QDateEdit_override_virtual_resizeEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_resizeEvent(void* self, QResizeEvent* event);
bool QDateEdit_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_keyReleaseEvent(void* self, QKeyEvent* event);
bool QDateEdit_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_focusOutEvent(void* self, QFocusEvent* event);
bool QDateEdit_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* event);
bool QDateEdit_override_virtual_changeEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_changeEvent(void* self, QEvent* event);
bool QDateEdit_override_virtual_closeEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_closeEvent(void* self, QCloseEvent* event);
bool QDateEdit_override_virtual_hideEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_hideEvent(void* self, QHideEvent* event);