qt6/gen_qdatetimeedit.nim

proc fcQTimeEdit_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_dragMoveEvent".}
proc fQTimeEdit_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_dragLeaveEvent".}
proc fcQTimeEdit_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_dragLeaveEvent".}
proc fQTimeEdit_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_dropEvent".}
proc fcQTimeEdit_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_dropEvent".}
proc fQTimeEdit_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QTimeEdit_virtualbase_nativeEvent".}
proc fcQTimeEdit_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_nativeEvent".}
proc fQTimeEdit_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QTimeEdit_virtualbase_metric".}
proc fcQTimeEdit_override_virtual_metric(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_metric".}
proc fQTimeEdit_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QTimeEdit_virtualbase_initPainter".}
proc fcQTimeEdit_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_initPainter".}
proc fQTimeEdit_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QTimeEdit_virtualbase_redirected".}
proc fcQTimeEdit_override_virtual_redirected(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_redirected".}
proc fQTimeEdit_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QTimeEdit_virtualbase_sharedPainter".}
proc fcQTimeEdit_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_sharedPainter".}
proc fQTimeEdit_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QTimeEdit_virtualbase_inputMethodEvent".}
proc fcQTimeEdit_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_inputMethodEvent".}
proc fQTimeEdit_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QTimeEdit_virtualbase_eventFilter".}
proc fcQTimeEdit_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_eventFilter".}
proc fQTimeEdit_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_childEvent".}
proc fcQTimeEdit_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_childEvent".}
proc fQTimeEdit_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTimeEdit_virtualbase_customEvent".}
proc fcQTimeEdit_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_customEvent".}
proc fQTimeEdit_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTimeEdit_virtualbase_connectNotify".}
proc fcQTimeEdit_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_connectNotify".}
proc fQTimeEdit_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTimeEdit_virtualbase_disconnectNotify".}
proc fcQTimeEdit_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTimeEdit_override_virtual_disconnectNotify".}
proc fcQTimeEdit_staticMetaObject(): pointer {.importc: "QTimeEdit_staticMetaObject".}
proc fcQTimeEdit_delete(self: pointer) {.importc: "QTimeEdit_delete".}
proc fcQDateEdit_new(parent: pointer): ptr cQDateEdit {.importc: "QDateEdit_new".}
proc fcQDateEdit_new2(): ptr cQDateEdit {.importc: "QDateEdit_new2".}
proc fcQDateEdit_new3(date: pointer): ptr cQDateEdit {.importc: "QDateEdit_new3".}
proc fcQDateEdit_new4(date: pointer, parent: pointer): ptr cQDateEdit {.importc: "QDateEdit_new4".}
proc fcQDateEdit_metaObject(self: pointer, ): pointer {.importc: "QDateEdit_metaObject".}
proc fcQDateEdit_metacast(self: pointer, param1: cstring): pointer {.importc: "QDateEdit_metacast".}
proc fcQDateEdit_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QDateEdit_metacall".}
proc fcQDateEdit_tr(s: cstring): struct_miqt_string {.importc: "QDateEdit_tr".}
proc fcQDateEdit_userDateChanged(self: pointer, date: pointer): void {.importc: "QDateEdit_userDateChanged".}
proc fQDateEdit_connect_userDateChanged(self: pointer, slot: int) {.importc: "QDateEdit_connect_userDateChanged".}
proc fcQDateEdit_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QDateEdit_tr2".}
proc fcQDateEdit_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QDateEdit_tr3".}
proc fQDateEdit_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QDateEdit_virtualbase_metaObject".}
proc fcQDateEdit_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_metaObject".}
proc fQDateEdit_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QDateEdit_virtualbase_metacast".}
proc fcQDateEdit_override_virtual_metacast(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_metacast".}
proc fQDateEdit_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QDateEdit_virtualbase_metacall".}
proc fcQDateEdit_override_virtual_metacall(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_metacall".}
proc fQDateEdit_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QDateEdit_virtualbase_sizeHint".}
proc fcQDateEdit_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_sizeHint".}
proc fQDateEdit_virtualbase_clear(self: pointer, ): void{.importc: "QDateEdit_virtualbase_clear".}
proc fcQDateEdit_override_virtual_clear(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_clear".}
proc fQDateEdit_virtualbase_stepBy(self: pointer, steps: cint): void{.importc: "QDateEdit_virtualbase_stepBy".}
proc fcQDateEdit_override_virtual_stepBy(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_stepBy".}
proc fQDateEdit_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QDateEdit_virtualbase_event".}
proc fcQDateEdit_override_virtual_event(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_event".}
proc fQDateEdit_virtualbase_keyPressEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_keyPressEvent".}
proc fcQDateEdit_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_keyPressEvent".}
proc fQDateEdit_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_wheelEvent".}
proc fcQDateEdit_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_wheelEvent".}
proc fQDateEdit_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_focusInEvent".}
proc fcQDateEdit_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_focusInEvent".}
proc fQDateEdit_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QDateEdit_virtualbase_focusNextPrevChild".}
proc fcQDateEdit_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_focusNextPrevChild".}
proc fQDateEdit_virtualbase_validate(self: pointer, input: struct_miqt_string, pos: ptr cint): cint{.importc: "QDateEdit_virtualbase_validate".}
proc fcQDateEdit_override_virtual_validate(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_validate".}
proc fQDateEdit_virtualbase_fixup(self: pointer, input: struct_miqt_string): void{.importc: "QDateEdit_virtualbase_fixup".}
proc fcQDateEdit_override_virtual_fixup(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_fixup".}
proc fQDateEdit_virtualbase_dateTimeFromText(self: pointer, text: struct_miqt_string): pointer{.importc: "QDateEdit_virtualbase_dateTimeFromText".}
proc fcQDateEdit_override_virtual_dateTimeFromText(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_dateTimeFromText".}
proc fQDateEdit_virtualbase_textFromDateTime(self: pointer, dt: pointer): struct_miqt_string{.importc: "QDateEdit_virtualbase_textFromDateTime".}
proc fcQDateEdit_override_virtual_textFromDateTime(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_textFromDateTime".}
proc fQDateEdit_virtualbase_stepEnabled(self: pointer, ): cint{.importc: "QDateEdit_virtualbase_stepEnabled".}
proc fcQDateEdit_override_virtual_stepEnabled(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_stepEnabled".}
proc fQDateEdit_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_mousePressEvent".}
proc fcQDateEdit_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_mousePressEvent".}
proc fQDateEdit_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_paintEvent".}
proc fcQDateEdit_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_paintEvent".}
proc fQDateEdit_virtualbase_initStyleOption(self: pointer, option: pointer): void{.importc: "QDateEdit_virtualbase_initStyleOption".}
proc fcQDateEdit_override_virtual_initStyleOption(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_initStyleOption".}
proc fQDateEdit_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QDateEdit_virtualbase_minimumSizeHint".}
proc fcQDateEdit_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_minimumSizeHint".}
proc fQDateEdit_virtualbase_inputMethodQuery(self: pointer, param1: cint): pointer{.importc: "QDateEdit_virtualbase_inputMethodQuery".}
proc fcQDateEdit_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_inputMethodQuery".}
proc fQDateEdit_virtualbase_resizeEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_resizeEvent".}
proc fcQDateEdit_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_resizeEvent".}
proc fQDateEdit_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_keyReleaseEvent".}
proc fcQDateEdit_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_keyReleaseEvent".}
proc fQDateEdit_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_focusOutEvent".}
proc fcQDateEdit_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_focusOutEvent".}
proc fQDateEdit_virtualbase_contextMenuEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_contextMenuEvent".}
proc fcQDateEdit_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_contextMenuEvent".}
proc fQDateEdit_virtualbase_changeEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_changeEvent".}
proc fcQDateEdit_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_changeEvent".}
proc fQDateEdit_virtualbase_closeEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_closeEvent".}
proc fcQDateEdit_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_closeEvent".}
proc fQDateEdit_virtualbase_hideEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_hideEvent".}
proc fcQDateEdit_override_virtual_hideEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_hideEvent".}
